--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,10 @@
 name: Check Availability
 
 on:
-  schedule:
-    # 5分おきに実行
-    - cron: '*/5 * * * *'
-  workflow_dispatch: # 手動実行も可能
+  # schedule:
+  #   # 5分おきに実行
+  #   - cron: '*/5 * * * *'
+  workflow_dispatch: # 手動実行のみ
 
 jobs:
   check:
