--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,10 +1,10 @@
 name: Check Availability
 
 on:
-  # schedule:
-  #   # 5分おきに実行
-  #   - cron: '*/5 * * * *'
-  workflow_dispatch: # 手動実行のみ
+  schedule:
+    # 5分おきに実行
+    - cron: '*/5 * * * *'
+  workflow_dispatch: # 手動実行も可能
 
 jobs:
   check:
@@ -23,15 +23,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install chromium
-
       - name: Run availability check
         env:
           LINE_CHANNEL_ACCESS_TOKEN: ${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }}
           LINE_USER_ID: ${{ secrets.LINE_USER_ID }}
-          GOLF_USERNAME: ${{ secrets.GOLF_USERNAME }}
-          GOLF_PASSWORD: ${{ secrets.GOLF_PASSWORD }}
         run: npm run check
 
       - name: Commit status update
