--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "js-yaml": "^4.1.0",
-    "playwright": "^1.40.0"
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.10.0",
+    "@vercel/node": "^5.5.15",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.2"
   }
