--- a/config/sites.yml
+++ b/config/sites.yml
@@ -7,3 +7,28 @@ sites:
       # 「空き枠はございません」以外のテキストが出たら通知
       textNotContains: "空き枠はございません"
     minDaysAhead: 7  # 7日以降の空きのみ通知（直近の空きは無視）
+
+  - name: "Hermès メンズバッグ"
+    url: "https://www.hermes.com/jp/ja/category/men/bags-and-small-leather-goods/bags/"
+    notifyWhen:
+      productScan:
+        # バッグ/メッセンジャー/書類ケースのみ抽出（《》で囲まれた製品名を含むもの）
+        productNameRegex: '"title":"((バッグ|メッセンジャー|書類ケース)[^"]*《[^"]+》[^"]*)"'
+        # 商品URLを抽出（商品名の前方にあるURLをキャプチャ）
+        productUrlRegex: '"url":"(/product/[^"]+)"'
+        baseUrl: "https://www.hermes.com/jp/ja"
+        # 除外する商品名（通知不要な商品をここに追加）
+        excludeProducts:
+          - "バッグ 《エトリヴィエール・ショッピング》"
+          - "メッセンジャー 《エールバッグ》 39"
+          - "バッグ 《アンクラージュ》"
+          - "バッグ 《エルメス・オールバック》"
+          - "バッグ 《エトリヴィエール・ポケット》 27"
+          - "メッセンジャー 《オールバック》"
+          - "バッグ 《ホースバック》"
+          - "メッセンジャー 《サック・ア・デペッシュ》 21 カラーブロック"
+          - "バッグ 《バナシルク》"
+          - "バッグ 《カバッシュ》"
+          - "バッグ 《ロング・クーリエ》"
+          - "バッグ 《ボリード1923》 45 カザック"
+          - "書類ケース 《ヴィクトリア》 ライト"
